Fiksa conf.interval

--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "# Preview plot of the franke function\r\n",
     "%matplotlib\r\n",
@@ -105,15 +105,7 @@
     "\r\n",
     "plt.savefig(f\"{REPORT_FIGURES}franke_function_preview.pdf\")"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Using matplotlib backend: Qt5Agg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -133,13 +125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
-    "n = 2000 # The number of point in the franke function\r\n",
+    "np.random.seed(4155)\r\n",
+    "n = 1000 # The number of point in the franke function\r\n",
     "x = np.random.rand(n)\r\n",
     "y = np.random.rand(n)\r\n",
     "z = FrankeFunction(x, y) \r\n",
-    "noise = 0.05 * np.random.randn(n) # Stochastic noise\r\n",
+    "#noise = 0.05 * np.random.randn(n) # Stochastic noise\r\n",
+    "noise = 0.7 * np.random.randn(n) # Stochastic noise\r\n",
     "z += noise # Adding stochastic noise"
    ],
    "outputs": [],
@@ -155,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "fig = plt.figure(figsize=(8,8))\r\n",
     "degrees = 6\r\n",
@@ -214,9 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "source": [
-    "degrees = 5\r\n",
+    "degrees = 2\r\n",
     "z_train_OLS = pd.DataFrame()\r\n",
     "z_hat_train_OLS = pd.DataFrame()\r\n",
     "z_test_OLS = pd.DataFrame()\r\n",
@@ -225,35 +219,77 @@
     "# TODO: Must fix so that training and test data are used. \r\n",
     "# Must evalute model using MSE from traning and test\r\n",
     "conf_df = pd.DataFrame()\r\n",
-    "for degree in range(1, degrees + 1):\r\n",
+    "\r\n",
+    "for degree in range(1, degrees):\r\n",
     "    X = create_X(x, y, degree) # Design Matrix\r\n",
     "    #X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False)\r\n",
     "    X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False, random_state=4155)\r\n",
     "    model = OLS() # The model\r\n",
+    "    X_train = X; z_train = z\r\n",
     "    model.fit(X_train, z_train) # Fitting the model\r\n",
-    "    \r\n",
     "    z_hat_train = model.predict(X_train) # predict on train data\r\n",
     "    z_hat_test = model.predict(X_test) # predict on test data\r\n",
+    "    \r\n",
+    "\r\n",
+    "   \r\n",
     "\r\n",
     "    # Evaluatation metrics\r\n",
     "    # TODO:\r\n",
+    "    MSE_score = MSE(z_train, z_hat_train)\r\n",
+    "    R2_score = R2(z_train, z_hat_train)\r\n",
+    "    var_z_train = np.var(z_train)\r\n",
     "\r\n",
     "    N, P = X.shape\r\n",
-    "    variance = np.sum(((z_train - z_hat_train) ** 2)) / N\r\n",
-    "    X_T_X_diag = np.diag(np.linalg.pinv(X.T @ X))\r\n",
-    "    SE_betas = np.sqrt(variance * X_T_X_diag) \r\n",
+    "    #sigma_hat = np.sqrt(np.sum((z - z_hat_train)**2)) / N\r\n",
+    "    var_hat = (1/(N-P-1)) * np.sum((z - z_hat_train)**2)\r\n",
+    "    sigma_hat = np.sqrt(var_hat)\r\n",
+    "\r\n",
+    "    #invXTX_diag = np.diag(np.linalg.pinv(X_train.T @ X_train)); print(\"Diag\", np.sqrt(invXTX_diag))\r\n",
+    "    invXTX_diag = np.diag(np.linalg.inv(X_train.T @ X_train)); print(\"Diag\", np.sqrt(invXTX_diag))\r\n",
+    "    SE_betas = var_hat * invXTX_diag\r\n",
+    "    SE_betas = np.sqrt(SE_betas)\r\n",
+    "    \r\n",
+    "    #variance = np.sum(((z_train - z_hat_train) ** 2)) / N\r\n",
+    "    #sigma = np.sqrt(variance)\r\n",
+    "    \r\n",
+    "    #SE_betas = np.sqrt(variance * invXTX_diag)     \r\n",
+    "    #SE_betas = sigma * np.sqrt(invXTX_diag)     \r\n",
+    "    \r\n",
     "    betas = model.get_all_betas()\r\n",
-    "    lower_all_betas = betas - (1.966 * SE_betas)\r\n",
-    "    upper_all_betas = betas + (1.966 * SE_betas)\r\n",
+    "    CI_lower_all_betas = betas - (1.96 * SE_betas)\r\n",
+    "    CI_upper_all_betas = betas + (1.96 * SE_betas)\r\n",
+    "    CL = np.zeros((CI_upper_all_betas.shape[0],2))\r\n",
+    "    CL[:,0] = CI_lower_all_betas\r\n",
+    "    CL[:,1] = CI_upper_all_betas\r\n",
     "\r\n",
     "    #df = pd.DataFrame(columns=[\"lower_conf\",\"upper_conf\", \"beta coefficient\" ])\r\n",
+    "    #print(\"CI shape\",CI_lower_all_betas.shape)\r\n",
+    "    #print(degree*betas.shape)\r\n",
+    "    #df = pd.DataFrame.from_dict({\"lower_conf\":CI_lower_all_betas, \"upper_conf\":CI_upper_all_betas, \r\n",
+    "    #                             \"beta\": betas,  \"degree\" :degree*betas.shape}, orient='index').T\r\n",
+    "    #conf_df = pd.concat([conf_df,df], axis=0)\r\n",
     "\r\n",
-    "    df = pd.DataFrame.from_dict({\"lower_conf\":lower_all_betas, \"upper_conf\":upper_all_betas, \r\n",
-    "                                 \"beta\": betas,  \"degree\" :degree*betas.shape}, orient='index').T\r\n",
-    "    conf_df = pd.concat([conf_df,df], axis=0)\r\n",
-    "\r\n",
+    "    \r\n",
+    "    print(f\"Degree: {degree}\")\r\n",
+    "    print(f\"Mean Square Error: {MSE_score}\")\r\n",
+    "    print(f\"R2 score: {R2_score}\")\r\n",
+    "    print(f\"Variance: {var_z_train}\")\r\n",
+    "    print(f\"Sigma:{sigma_hat}\")\r\n",
+    "    print(\"BetaSigma: \")\r\n",
+    "    print(SE_betas)\r\n",
+    "    print(\"ConfidenceInterval: \")\r\n",
+    "    print(CL)\r\n",
+    "    print(\"Beta: \")\r\n",
+    "    print(betas)\r\n",
+    "    #print(\"Relative confidense: \")\r\n",
+    "    #print(relative)\r\n",
     "    #\"beta_no\": f\"beta{np.arange(betas.shape[0]+1)}\",\r\n",
     "\r\n",
+    "    print(z.shape)\r\n",
+    "    print(X.shape)\r\n",
+    "    import statsmodels.api as sm\r\n",
+    "    mod = sm.OLS(np.expand_dims(z_train, axis=1),X_train).fit()\r\n",
+    "    print(mod.summary())\r\n",
     "\r\n",
     "    \"\"\"\r\n",
     "    conf_intervall_betas = np.zeros((betas.shape[0],2))\r\n",
@@ -299,12 +335,68 @@
     "mse_scores_test = ((z_test_OLS - z_hat_test_OLS) ** 2).mean()\r\n",
     "# R2 calculations for all lambda values\r\n",
     "R2_scores_train = 1 - ((z_train_OLS - z_hat_train_OLS) ** 2).sum() / ((z_train_OLS - z_train_OLS.mean())**2).sum() \r\n",
-    "R2_scores_test = 1 - ((z_test_OLS - z_hat_test_OLS) ** 2).sum() / ((z_test_OLS - z_test_OLS.mean())**2).sum()  \r\n",
-    "\r\n",
+    "R2_scores_test = 1 - ((z_test_OLS - z_hat_test_OLS) ** 2).sum() / ((z_test_OLS - z_test_OLS.mean())**2).sum()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Diag [0.08164447 0.10757432 0.10839043]\n",
+      "Degree: 1\n",
+      "Mean Square Error: 0.5783645675175659\n",
+      "R2 score: 0.014245859021887686\n",
+      "Variance: 0.5867229398029056\n",
+      "Sigma:0.7620284225569967\n",
+      "BetaSigma: \n",
+      "[0.06221541 0.08197469 0.08259659]\n",
+      "ConfidenceInterval: \n",
+      "[[ 0.57050611  0.81439051]\n",
+      " [-0.39703062 -0.07568984]\n",
+      " [-0.78415197 -0.46037333]]\n",
+      "Beta: \n",
+      "[ 0.69244831 -0.23636023 -0.62226265]\n",
+      "(1000,)\n",
+      "(1000, 3)\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.073\n",
+      "Model:                            OLS   Adj. R-squared:                  0.071\n",
+      "Method:                 Least Squares   F-statistic:                     39.05\n",
+      "Date:                Tue, 21 Sep 2021   Prob (F-statistic):           4.70e-17\n",
+      "Time:                        20:20:00   Log-Likelihood:                -1114.6\n",
+      "No. Observations:                1000   AIC:                             2235.\n",
+      "Df Residuals:                     997   BIC:                             2250.\n",
+      "Df Model:                           2                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          0.9257      0.060     15.348      0.000       0.807       1.044\n",
+      "x1            -0.5066      0.079     -6.375      0.000      -0.663      -0.351\n",
+      "x2            -0.4958      0.080     -6.192      0.000      -0.653      -0.339\n",
+      "==============================================================================\n",
+      "Omnibus:                        0.448   Durbin-Watson:                   2.090\n",
+      "Prob(Omnibus):                  0.799   Jarque-Bera (JB):                0.471\n",
+      "Skew:                           0.051   Prob(JB):                        0.790\n",
+      "Kurtosis:                       2.971   Cond. No.                         5.18\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "# Plots\r\n",
     "plt.figure(figsize=(12,8))\r\n",
-    "plt.plot(np.arange(1,degrees+1), mse_scores_train, c=\"c\", label=\"Training data\")\r\n",
-    "plt.plot(np.arange(1,degrees+1), mse_scores_test, c=\"m\", label=\"Test data\")\r\n",
+    "plt.plot(np.arange(1,degrees), mse_scores_train, c=\"c\", label=\"Training data\")\r\n",
+    "plt.plot(np.arange(1,degrees), mse_scores_test, c=\"m\", label=\"Test data\")\r\n",
     "plt.xlabel(\"Model complexity - Number of polynomial degrees\")\r\n",
     "plt.ylabel(\"MSE\")\r\n",
     "plt.title(\"Training evaluation on OLS regression fit\")\r\n",
