--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 \usepackage{fancyvrb}
 \usepackage{csvsimple}
 \usepackage{booktabs}
+\usepackage{multicol}
 \usepackage[margin=3cm]{geometry}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{tikz}
@@ -31,6 +32,25 @@
 \begin{document}
 
 \maketitle
+  
+\section*{Motivation}
+In Project 1, we are tasked to study various regressions methods, such as Ordinary Least Squares, Ridge and Lasso. Our first area of study is how to fit polynomials to a specific two-dimensional function called Franke's Function. Our motivation behind fitting polynomials to Frank's function is to test the implementation of our regression algorithms, as well as studying various techniques such as bootstrapping and measurements such as the bias-variance tradeoff. Finally, we will move on to use real digital terrain data for our analysis.
+
+Frank's function is given on the form
+
+\begin{align*}
+  f(x,y) &= \frac{3}{4}\exp{\left(-\frac{(9x-2)^2}{4} - \frac{(9y-2)^2}{4}\right)}+\frac{3}{4}\exp{\left(-\frac{(9x+1)^2}{49}- \frac{(9y+1)}{10}\right)} \\
+  &+\frac{1}{2}\exp{\left(-\frac{(9x-7)^2}{4} - \frac{(9y-3)^2}{4}\right)} -\frac{1}{5}\exp{\left(-(9x-4)^2 - (9y-7)^2\right) }
+\end{align*}
+
+with a 3-dimensional plot given in Figure \ref{fig:1}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.75]{figures/franke_function_preview.pdf}
+  \caption{\label{fig:1}Plot of the Franke Function}
+\end{figure}
+
 \section*{Theory}
 MSE value between $\boldsymbol{y}$ and $\boldsymbol{\hat y}$ is defined as;
 \begin{equation}
@@ -53,15 +73,11 @@ The variance of $\boldsymbol{y}$ is defined as;
     \mathrm{var}[\boldsymbol{x}]=\frac{1}{n}\sum_{i=0}^{n-1}(x_i- \overline{x})^2=\mathbb{E}\left[(\bm{y}-\bm{\tilde{y}})^2\right]
 \end{equation}
 
-
-
 \section*{Exercise 1}
-\begin{figure}
-  \centering
-  \includegraphics{figures/franke_function_preview.pdf}
-  \caption{?}
-  \label{fig: ?}
-\end{figure}
+
+
+
+
 
 \begin{figure}
   \centering
@@ -148,6 +164,16 @@ to see that the final term in (\ref{eq:varbi}) is equal to the noise. Thus we ha
 \[
 =\frac{1}{n}\sum_i(f_i-\mathbb{E}\left[\bm{\tilde{y}}\right])^2+\frac{1}{n}\sum_i(\tilde{y}_i-\mathbb{E}\left[\bm{\tilde{y}}\right])^2+\sigma^2.
 \]
+
+The final expression consists of three terms. The first term is a sum of the squared bias, the second term is the variance and the final term is a constant noise term. The sum of squared bias and variance make up the mean square error of our model. \cite{Hastie2009} 
+
+The bias component of the mean square error measures the difference from the true mean to the desired regression model. As function of model complexity, the bias will decrease as complexity increases. The second term, the variance, gives a measurement of the variation of the model values around their average value. The variance will increase with model complexity. The constant noise term $\sigma^2$ is an irreducible error, and as such does not contribute when analysing the bias-variance tradeoff.
+
+The bias-variance tradeoff can be used as a method for model selection. As has been alluded to in the previous paragraph, the variance is inverse proportional to the bias. As such, there is a trade-off between bias and variance. As the bias-variance is directly related to the mean square error for both the training data but also test and production data used for making new predictions. When selecting a model we wish to balance and minimize both quantities, as that leads to the model with the best predicitve capabilities. \cite{Bishop2016}
+
+Furthermore, the problem of overfitting can also be discussed in light of the bias variance tradeoff. Overfitting is proportional to the model variance, as such a high variance leads to an overfitted model. An overfitted model is one that has learned the noise of the training data, resulting in a perfect fit for the training data but a high mean square error when predicting using new data. Hence, a higher bias can be considered more useful to circumvent overfitting.
+
+Lastly, it should be noted that the bias-variance tradeoff measuremnet is performed for a single dataset of limited size. As such, if there were more datapoints to train the model with, the model would attain a better overall fit. Moreover, a greater amount of training data would reduce the level of overfitting for a given model complexity. \cite{Bishop2016} Though there are some limitations to the measurement, the bias-variance tradeoff can be used to estimate where the trained model is general enough to both avoid under -and overfitting (i.e. too high bias or too high variance).
 
 \begin{figure}
   \centering
