--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "INPUT_DATA = \"data/input_data/\"  # Path for input data\r\n",
     "REPORT_DATA = \"data/report_data/\" # Path for data ment for the report\r\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "np.random.seed(4155)\r\n",
     "n = 1000 # The number of point in the franke function\r\n",
@@ -208,9 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "source": [
-    "degrees = 2\r\n",
+    "degrees = 3\r\n",
     "z_train_OLS = pd.DataFrame()\r\n",
     "z_hat_train_OLS = pd.DataFrame()\r\n",
     "z_test_OLS = pd.DataFrame()\r\n",
@@ -221,40 +221,30 @@
     "conf_df = pd.DataFrame()\r\n",
     "\r\n",
     "for degree in range(1, degrees):\r\n",
+    "    degree = 2\r\n",
     "    X = create_X(x, y, degree) # Design Matrix\r\n",
     "    #X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False)\r\n",
     "    X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False, random_state=4155)\r\n",
     "    model = OLS() # The model\r\n",
-    "    X_train = X; z_train = z\r\n",
+    "    #X_train = X; z_train = z\r\n",
     "    model.fit(X_train, z_train) # Fitting the model\r\n",
     "    z_hat_train = model.predict(X_train) # predict on train data\r\n",
     "    z_hat_test = model.predict(X_test) # predict on test data\r\n",
     "    \r\n",
-    "\r\n",
-    "   \r\n",
-    "\r\n",
     "    # Evaluatation metrics\r\n",
     "    # TODO:\r\n",
     "    MSE_score = MSE(z_train, z_hat_train)\r\n",
     "    R2_score = R2(z_train, z_hat_train)\r\n",
     "    var_z_train = np.var(z_train)\r\n",
-    "\r\n",
-    "    N, P = X.shape\r\n",
-    "    #sigma_hat = np.sqrt(np.sum((z - z_hat_train)**2)) / N\r\n",
-    "    var_hat = (1/(N-P-1)) * np.sum((z - z_hat_train)**2)\r\n",
-    "    sigma_hat = np.sqrt(var_hat)\r\n",
-    "\r\n",
-    "    #invXTX_diag = np.diag(np.linalg.pinv(X_train.T @ X_train)); print(\"Diag\", np.sqrt(invXTX_diag))\r\n",
+    "    N, P = X_train.shape\r\n",
+    "    #var_hat = (1/(N-P-1)) * np.sum((z_train - z_hat_train)**2)\r\n",
+    "    var_hat = (1/N) * np.sum((z_train - z_hat_train)**2)\r\n",
+    "    #sigma_hat = np.sqrt(var_hat)\r\n",
     "    invXTX_diag = np.diag(np.linalg.inv(X_train.T @ X_train)); print(\"Diag\", np.sqrt(invXTX_diag))\r\n",
     "    SE_betas = var_hat * invXTX_diag\r\n",
     "    SE_betas = np.sqrt(SE_betas)\r\n",
-    "    \r\n",
-    "    #variance = np.sum(((z_train - z_hat_train) ** 2)) / N\r\n",
-    "    #sigma = np.sqrt(variance)\r\n",
-    "    \r\n",
-    "    #SE_betas = np.sqrt(variance * invXTX_diag)     \r\n",
-    "    #SE_betas = sigma * np.sqrt(invXTX_diag)     \r\n",
-    "    \r\n",
+    "\r\n",
+    "    # Calculating 95% confidence intervall\r\n",
     "    betas = model.get_all_betas()\r\n",
     "    CI_lower_all_betas = betas - (1.96 * SE_betas)\r\n",
     "    CI_upper_all_betas = betas + (1.96 * SE_betas)\r\n",
@@ -274,7 +264,7 @@
     "    print(f\"Mean Square Error: {MSE_score}\")\r\n",
     "    print(f\"R2 score: {R2_score}\")\r\n",
     "    print(f\"Variance: {var_z_train}\")\r\n",
-    "    print(f\"Sigma:{sigma_hat}\")\r\n",
+    "    #print(f\"Sigma:{sigma_hat}\")\r\n",
     "    print(\"BetaSigma: \")\r\n",
     "    print(SE_betas)\r\n",
     "    print(\"ConfidenceInterval: \")\r\n",
@@ -291,37 +281,7 @@
     "    mod = sm.OLS(np.expand_dims(z_train, axis=1),X_train).fit()\r\n",
     "    print(mod.summary())\r\n",
     "\r\n",
-    "    \"\"\"\r\n",
-    "    conf_intervall_betas = np.zeros((betas.shape[0],2))\r\n",
-    "    for i in range(betas):\r\n",
-    "        conf_intervall_betas[i, 0] = beta - 1.966 * SE_betas[i]\r\n",
     "\r\n",
-    "\r\n",
-    "    #variance = np.sum((z_train - np.mean(z_hat_train)) ** 2) / n\r\n",
-    "    #sigma = np.sqrt(variance)\r\n",
-    "    #sigma = np.sqrt(1/(X.shape[0] - X.shape[1] - 1) * np.sum((z_test - z_hat_test)**2))\r\n",
-    "    \r\n",
-    "    \r\n",
-    "    #variance_estimate = sigma * X_T_X_diag\r\n",
-    "    #variance_estimate = sigma * np.sqrt(X_T_X_diag) ## sqrt of X_T_X_diag???\r\n",
-    "\r\n",
-    "    for i, beta in enumerate(betas):\r\n",
-    "        \r\n",
-    "        #var_beta = np.diag(sigma *np.linalg.inv((X.T.dot(X)))) # Variance of the beta coefficients\r\n",
-    "        #variance_estimate_beta_i = sigma * np.sqrt(np.linalg.pinv(X.T @ X))[i,i] # Variance of the beta coefficients\r\n",
-    "        \r\n",
-    "        \r\n",
-    "        SE_beta_i = np.sqrt(variance_estimate_beta_i / N) # Standard error of estimated beta\r\n",
-    "        lower = beta - 1.966 * SE_beta_i\r\n",
-    "        upper = beta + 1.966 * SE_beta_i\r\n",
-    "        df = pd.DataFrame.from_dict({\"lower_conf\":lower, \"upper_conf\":upper, \"beta\": beta, \"beta_no\": f\"beta{i+1}\", \"degree\" :degree}, orient='index').T\r\n",
-    "        conf_df = pd.concat([conf_df,df], axis=0)\r\n",
-    "\r\n",
-    "        \r\n",
-    "        #error = np.mean( np.mean((y_test - y_pred)**2, axis=1, keepdims=True) )\r\n",
-    "        #bias = np.mean( (y_test - np.mean(y_pred, axis=1, keepdims=True))**2 )\r\n",
-    "        #variance = np.mean( np.var(y_pred, axis=1, keepdims=True) )\r\n",
-    "    \"\"\"\r\n",
     "\r\n",
     "    # Filling up dataframes\r\n",
     "    z_train_OLS[degree] = z_train.flatten() \r\n",
@@ -342,44 +302,96 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Diag [0.08164447 0.10757432 0.10839043]\n",
-      "Degree: 1\n",
-      "Mean Square Error: 0.5783645675175659\n",
-      "R2 score: 0.014245859021887686\n",
-      "Variance: 0.5867229398029056\n",
-      "Sigma:0.7620284225569967\n",
+      "Diag [0.17054753 0.52612855 0.51662992 0.46740801 0.41644267 0.46627785]\n",
+      "Degree: 2\n",
+      "Mean Square Error: 0.5067218616269598\n",
+      "R2 score: 0.11537081087327394\n",
+      "Variance: 0.5728070787797283\n",
       "BetaSigma: \n",
-      "[0.06221541 0.08197469 0.08259659]\n",
+      "[0.12140323 0.37452145 0.36775991 0.33272158 0.29644221 0.33191709]\n",
       "ConfidenceInterval: \n",
-      "[[ 0.57050611  0.81439051]\n",
-      " [-0.39703062 -0.07568984]\n",
-      " [-0.78415197 -0.46037333]]\n",
+      "[[ 0.98308573  1.45898641]\n",
+      " [-2.23211203 -0.76398796]\n",
+      " [-1.162103    0.27951583]\n",
+      " [-0.30471507  0.99955352]\n",
+      " [ 0.76018561  1.92223909]\n",
+      " [-1.43697314 -0.13585816]]\n",
       "Beta: \n",
-      "[ 0.69244831 -0.23636023 -0.62226265]\n",
+      "[ 1.22103607 -1.49804999 -0.44129359  0.34741922  1.34121235 -0.78641565]\n",
       "(1000,)\n",
-      "(1000, 3)\n",
+      "(1000, 6)\n",
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                      y   R-squared:                       0.073\n",
-      "Model:                            OLS   Adj. R-squared:                  0.071\n",
-      "Method:                 Least Squares   F-statistic:                     39.05\n",
-      "Date:                Tue, 21 Sep 2021   Prob (F-statistic):           4.70e-17\n",
-      "Time:                        20:20:00   Log-Likelihood:                -1114.6\n",
-      "No. Observations:                1000   AIC:                             2235.\n",
-      "Df Residuals:                     997   BIC:                             2250.\n",
-      "Df Model:                           2                                         \n",
+      "Dep. Variable:                      y   R-squared:                       0.115\n",
+      "Model:                            OLS   Adj. R-squared:                  0.110\n",
+      "Method:                 Least Squares   F-statistic:                     20.71\n",
+      "Date:                Tue, 21 Sep 2021   Prob (F-statistic):           1.76e-19\n",
+      "Time:                        20:56:39   Log-Likelihood:                -863.23\n",
+      "No. Observations:                 800   AIC:                             1738.\n",
+      "Df Residuals:                     794   BIC:                             1767.\n",
+      "Df Model:                           5                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const          0.9257      0.060     15.348      0.000       0.807       1.044\n",
-      "x1            -0.5066      0.079     -6.375      0.000      -0.663      -0.351\n",
-      "x2            -0.4958      0.080     -6.192      0.000      -0.653      -0.339\n",
+      "const          1.2210      0.122     10.020      0.000       0.982       1.460\n",
+      "x1            -1.4980      0.376     -3.985      0.000      -2.236      -0.760\n",
+      "x2            -0.4413      0.369     -1.195      0.232      -1.166       0.283\n",
+      "x3             0.3474      0.334      1.040      0.299      -0.308       1.003\n",
+      "x4             1.3412      0.298      4.507      0.000       0.757       1.925\n",
+      "x5            -0.7864      0.333     -2.360      0.018      -1.440      -0.132\n",
       "==============================================================================\n",
-      "Omnibus:                        0.448   Durbin-Watson:                   2.090\n",
-      "Prob(Omnibus):                  0.799   Jarque-Bera (JB):                0.471\n",
-      "Skew:                           0.051   Prob(JB):                        0.790\n",
-      "Kurtosis:                       2.971   Cond. No.                         5.18\n",
+      "Omnibus:                        0.947   Durbin-Watson:                   2.046\n",
+      "Prob(Omnibus):                  0.623   Jarque-Bera (JB):                0.799\n",
+      "Skew:                           0.054   Prob(JB):                        0.671\n",
+      "Kurtosis:                       3.112   Cond. No.                         27.9\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "Diag [0.17054753 0.52612855 0.51662992 0.46740801 0.41644267 0.46627785]\n",
+      "Degree: 2\n",
+      "Mean Square Error: 0.5067218616269598\n",
+      "R2 score: 0.11537081087327394\n",
+      "Variance: 0.5728070787797283\n",
+      "BetaSigma: \n",
+      "[0.12140323 0.37452145 0.36775991 0.33272158 0.29644221 0.33191709]\n",
+      "ConfidenceInterval: \n",
+      "[[ 0.98308573  1.45898641]\n",
+      " [-2.23211203 -0.76398796]\n",
+      " [-1.162103    0.27951583]\n",
+      " [-0.30471507  0.99955352]\n",
+      " [ 0.76018561  1.92223909]\n",
+      " [-1.43697314 -0.13585816]]\n",
+      "Beta: \n",
+      "[ 1.22103607 -1.49804999 -0.44129359  0.34741922  1.34121235 -0.78641565]\n",
+      "(1000,)\n",
+      "(1000, 6)\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.115\n",
+      "Model:                            OLS   Adj. R-squared:                  0.110\n",
+      "Method:                 Least Squares   F-statistic:                     20.71\n",
+      "Date:                Tue, 21 Sep 2021   Prob (F-statistic):           1.76e-19\n",
+      "Time:                        20:56:39   Log-Likelihood:                -863.23\n",
+      "No. Observations:                 800   AIC:                             1738.\n",
+      "Df Residuals:                     794   BIC:                             1767.\n",
+      "Df Model:                           5                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          1.2210      0.122     10.020      0.000       0.982       1.460\n",
+      "x1            -1.4980      0.376     -3.985      0.000      -2.236      -0.760\n",
+      "x2            -0.4413      0.369     -1.195      0.232      -1.166       0.283\n",
+      "x3             0.3474      0.334      1.040      0.299      -0.308       1.003\n",
+      "x4             1.3412      0.298      4.507      0.000       0.757       1.925\n",
+      "x5            -0.7864      0.333     -2.360      0.018      -1.440      -0.132\n",
+      "==============================================================================\n",
+      "Omnibus:                        0.947   Durbin-Watson:                   2.046\n",
+      "Prob(Omnibus):                  0.623   Jarque-Bera (JB):                0.799\n",
+      "Skew:                           0.054   Prob(JB):                        0.671\n",
+      "Kurtosis:                       3.112   Cond. No.                         27.9\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -444,6 +456,59 @@
     "ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\r\n",
     "ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\r\n",
     "plt.savefig(f\"{REPORT_FIGURES}franke_function_OLS_best_fit.pdf\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "    \"\"\"\r\n",
+    "    conf_intervall_betas = np.zeros((betas.shape[0],2))\r\n",
+    "    for i in range(betas):\r\n",
+    "        conf_intervall_betas[i, 0] = beta - 1.966 * SE_betas[i]\r\n",
+    "\r\n",
+    "\r\n",
+    "    #variance = np.sum((z_train - np.mean(z_hat_train)) ** 2) / n\r\n",
+    "    #sigma = np.sqrt(variance)\r\n",
+    "    #sigma = np.sqrt(1/(X.shape[0] - X.shape[1] - 1) * np.sum((z_test - z_hat_test)**2))\r\n",
+    "    \r\n",
+    "    \r\n",
+    "    #variance_estimate = sigma * X_T_X_diag\r\n",
+    "    #variance_estimate = sigma * np.sqrt(X_T_X_diag) ## sqrt of X_T_X_diag???\r\n",
+    "\r\n",
+    "    for i, beta in enumerate(betas):\r\n",
+    "        \r\n",
+    "        #var_beta = np.diag(sigma *np.linalg.inv((X.T.dot(X)))) # Variance of the beta coefficients\r\n",
+    "        #variance_estimate_beta_i = sigma * np.sqrt(np.linalg.pinv(X.T @ X))[i,i] # Variance of the beta coefficients\r\n",
+    "        \r\n",
+    "        \r\n",
+    "        SE_beta_i = np.sqrt(variance_estimate_beta_i / N) # Standard error of estimated beta\r\n",
+    "        lower = beta - 1.966 * SE_beta_i\r\n",
+    "        upper = beta + 1.966 * SE_beta_i\r\n",
+    "        df = pd.DataFrame.from_dict({\"lower_conf\":lower, \"upper_conf\":upper, \"beta\": beta, \"beta_no\": f\"beta{i+1}\", \"degree\" :degree}, orient='index').T\r\n",
+    "        conf_df = pd.concat([conf_df,df], axis=0)\r\n",
+    "\r\n",
+    "        \r\n",
+    "        #error = np.mean( np.mean((y_test - y_pred)**2, axis=1, keepdims=True) )\r\n",
+    "        #bias = np.mean( (y_test - np.mean(y_pred, axis=1, keepdims=True))**2 )\r\n",
+    "        #variance = np.mean( np.var(y_pred, axis=1, keepdims=True) )\r\n",
+    "    \"\"\""
    ],
    "outputs": [],
    "metadata": {}
