added summary to OLS and some stuff for EX6

--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -234,8 +234,7 @@
     "    \r\n",
     "    # Model construction, fitting, and predictions\r\n",
     "    model = OLS() # The model\r\n",
-    "    model.fit(X_train, z_train) # Fitting the model\r\n",
-    "    z_hat_train = model.predict(X_train) # predict on train data\r\n",
+    "    z_hat_train = model.fit(X_train, z_train) # Fitting the model and predict on training data\r\n",
     "    z_hat_test = model.predict(X_test) # predict on test data\r\n",
     "    \r\n",
     "    # Evaluatation metrics\r\n",
@@ -472,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "# Plots\r\n",
     "plt.figure(figsize=(12,8))\r\n",
@@ -508,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "source": [
     "optimal_degree = 5\r\n",
     "X = create_X(x, y, optimal_degree) # Design Matrix\r\n",
@@ -531,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "source": [
     "optimal_degree_coeffs = coeffs_df[coeffs_df[\"degree\"] == optimal_degree]\r\n",
     "display(optimal_degree_coeffs)\r\n",
@@ -804,6 +803,279 @@
    "execution_count": null,
    "source": [],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# test of summary functnion\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "optimal_degree = 5\r\n",
+    "X = create_X(x, y, optimal_degree) # Design Matrix\r\n",
+    "model = OLS(optimal_degree) # The model\r\n",
+    "z_hat_train = model.fit(X, z) # Fitting the model & predict on train data\r\n",
+    "summary = model.summary()\r\n",
+    "display(summary)"
+   ],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>degree</th>\n",
+       "      <th>coeff name</th>\n",
+       "      <th>coeff value</th>\n",
+       "      <th>Std Error</th>\n",
+       "      <th>CI lower</th>\n",
+       "      <th>CI_upper</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_1</td>\n",
+       "      <td>0.4076</td>\n",
+       "      <td>0.0344</td>\n",
+       "      <td>0.3401</td>\n",
+       "      <td>0.475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_2</td>\n",
+       "      <td>7.5934</td>\n",
+       "      <td>0.3689</td>\n",
+       "      <td>6.8704</td>\n",
+       "      <td>8.3165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_3</td>\n",
+       "      <td>3.7205</td>\n",
+       "      <td>0.3823</td>\n",
+       "      <td>2.9712</td>\n",
+       "      <td>4.4698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_4</td>\n",
+       "      <td>-33.5774</td>\n",
+       "      <td>1.8149</td>\n",
+       "      <td>-37.1346</td>\n",
+       "      <td>-30.0202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_5</td>\n",
+       "      <td>-15.0299</td>\n",
+       "      <td>1.4024</td>\n",
+       "      <td>-17.7786</td>\n",
+       "      <td>-12.2813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_6</td>\n",
+       "      <td>-8.0492</td>\n",
+       "      <td>1.8582</td>\n",
+       "      <td>-11.6913</td>\n",
+       "      <td>-4.4072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_7</td>\n",
+       "      <td>48.3536</td>\n",
+       "      <td>4.1767</td>\n",
+       "      <td>40.1673</td>\n",
+       "      <td>56.5399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_8</td>\n",
+       "      <td>41.8482</td>\n",
+       "      <td>2.98</td>\n",
+       "      <td>36.0075</td>\n",
+       "      <td>47.689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_9</td>\n",
+       "      <td>23.242</td>\n",
+       "      <td>3.0961</td>\n",
+       "      <td>17.1737</td>\n",
+       "      <td>29.3104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_10</td>\n",
+       "      <td>-10.4112</td>\n",
+       "      <td>4.229</td>\n",
+       "      <td>-18.7</td>\n",
+       "      <td>-2.1224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_11</td>\n",
+       "      <td>-25.6986</td>\n",
+       "      <td>4.4065</td>\n",
+       "      <td>-34.3354</td>\n",
+       "      <td>-17.0619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_12</td>\n",
+       "      <td>-48.7423</td>\n",
+       "      <td>3.2602</td>\n",
+       "      <td>-55.1324</td>\n",
+       "      <td>-42.3523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_13</td>\n",
+       "      <td>-7.8775</td>\n",
+       "      <td>3.0239</td>\n",
+       "      <td>-13.8043</td>\n",
+       "      <td>-1.9506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_14</td>\n",
+       "      <td>-33.3236</td>\n",
+       "      <td>3.4022</td>\n",
+       "      <td>-39.9919</td>\n",
+       "      <td>-26.6553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_15</td>\n",
+       "      <td>32.2386</td>\n",
+       "      <td>4.4752</td>\n",
+       "      <td>23.4672</td>\n",
+       "      <td>41.0099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_16</td>\n",
+       "      <td>3.0183</td>\n",
+       "      <td>1.7258</td>\n",
+       "      <td>-0.3644</td>\n",
+       "      <td>6.4009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_17</td>\n",
+       "      <td>16.541</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>13.6206</td>\n",
+       "      <td>19.4614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_18</td>\n",
+       "      <td>10.2155</td>\n",
+       "      <td>1.4534</td>\n",
+       "      <td>7.3668</td>\n",
+       "      <td>13.0642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_19</td>\n",
+       "      <td>-4.7414</td>\n",
+       "      <td>1.4336</td>\n",
+       "      <td>-7.5513</td>\n",
+       "      <td>-1.9314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_20</td>\n",
+       "      <td>18.056</td>\n",
+       "      <td>1.5104</td>\n",
+       "      <td>15.0957</td>\n",
+       "      <td>21.0164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>b_21</td>\n",
+       "      <td>-17.7237</td>\n",
+       "      <td>1.7716</td>\n",
+       "      <td>-21.196</td>\n",
+       "      <td>-14.2513</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   degree coeff name coeff value Std Error CI lower CI_upper\n",
+       "0     5.0        b_1      0.4076    0.0344   0.3401    0.475\n",
+       "1     5.0        b_2      7.5934    0.3689   6.8704   8.3165\n",
+       "2     5.0        b_3      3.7205    0.3823   2.9712   4.4698\n",
+       "3     5.0        b_4    -33.5774    1.8149 -37.1346 -30.0202\n",
+       "4     5.0        b_5    -15.0299    1.4024 -17.7786 -12.2813\n",
+       "5     5.0        b_6     -8.0492    1.8582 -11.6913  -4.4072\n",
+       "6     5.0        b_7     48.3536    4.1767  40.1673  56.5399\n",
+       "7     5.0        b_8     41.8482      2.98  36.0075   47.689\n",
+       "8     5.0        b_9      23.242    3.0961  17.1737  29.3104\n",
+       "9     5.0       b_10    -10.4112     4.229    -18.7  -2.1224\n",
+       "10    5.0       b_11    -25.6986    4.4065 -34.3354 -17.0619\n",
+       "11    5.0       b_12    -48.7423    3.2602 -55.1324 -42.3523\n",
+       "12    5.0       b_13     -7.8775    3.0239 -13.8043  -1.9506\n",
+       "13    5.0       b_14    -33.3236    3.4022 -39.9919 -26.6553\n",
+       "14    5.0       b_15     32.2386    4.4752  23.4672  41.0099\n",
+       "15    5.0       b_16      3.0183    1.7258  -0.3644   6.4009\n",
+       "16    5.0       b_17      16.541      1.49  13.6206  19.4614\n",
+       "17    5.0       b_18     10.2155    1.4534   7.3668  13.0642\n",
+       "18    5.0       b_19     -4.7414    1.4336  -7.5513  -1.9314\n",
+       "19    5.0       b_20      18.056    1.5104  15.0957  21.0164\n",
+       "20    5.0       b_21    -17.7237    1.7716  -21.196 -14.2513"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
    "metadata": {}
   }
  ],
