--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -48,12 +48,33 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Global variables"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "source": [
+    "np.random.seed(4155) # Random seed to guarantee reproducibility\r\n",
+    "# Paths\r\n",
     "INPUT_DATA = \"data/input_data/\"  # Path for input data\r\n",
     "REPORT_DATA = \"data/report_data/\" # Path for data ment for the report\r\n",
-    "REPORT_FIGURES = \"figures/\" # Path for figures ment for the report"
+    "REPORT_FIGURES = \"figures/\" # Path for figures ment for the report\r\n",
+    "# Setting for range of degrees\r\n",
+    "from_degree = 0\r\n",
+    "to_degree = 14\r\n",
+    "degrees = np.arange(from_degree,to_degree)\r\n",
+    "degree = 5\r\n",
+    "# Setting for logspace range of lambdas \r\n",
+    "from_lambda = -7 #\r\n",
+    "to_lambda = 3 #\r\n",
+    "nLambdas = 10\r\n",
+    "lambdas = np.logspace(from_lambda, to_lambda, nLambdas)\r\n",
+    "# Rescale settings\r\n",
+    "rescale = 0.1"
    ],
    "outputs": [],
    "metadata": {}
@@ -67,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "source": [
     "# Load the terrain\r\n",
     "terrain1_file = \"SRTM_data_Norway_1.tif\"\r\n",
@@ -102,10 +123,63 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# 1. Preprocessing and transformation\r\n",
+    "Least Square regression is not designed to tackle images directly. Thus, we must first transform the terrain data by slicing it into several bits and pieces. "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "# Preprocess \r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "# Flattening the 2D images grid data\r\n",
+    "x_flat = x.ravel()\r\n",
+    "y_flat = y.ravel()\r\n"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 2. Constructing input data for least square regression\r\n",
+    "We construct the data for least square regression based on preprocessed data. We also set up variables that will be used throughout the exercise."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "X = create_X(x_flat, y_flat, degree, intercept=False)\r\n",
+    "N,P = X.shape\r\n",
+    "nBetas = P\r\n",
+    "betas_OLS = np.empty((nLambdas, nBetas))\r\n",
+    "betas_Ridge = np.empty((nLambdas, nBetas))\r\n",
+    "betas_Lasso = np.empty((nLambdas, nBetas))\r\n",
+    "sigma_betas_OLS = np.empty((nLambdas, nBetas))\r\n",
+    "sigma_betas_Ridge = np.empty((nLambdas, nBetas))\r\n",
+    "sigma_betas_Lasso = np.empty((nLambdas, nBetas))"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20848/3502826553.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_X\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mintercept\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mP\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mnBetas\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
