--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -1077,6 +1077,162 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "optimal_lambda = -1\r\n",
+    "X = create_X(x, y, 3) # Design Matrix\r\n",
+    "model = RidgeRegression(optimal_lambda) # The model\r\n",
+    "z_hat_train = model.fit(X, z) # Fitting the model & predict on train data\r\n",
+    "summary = model.summary()\r\n",
+    "display(summary)"
+   ],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lambda</th>\n",
+       "      <th>coeff name</th>\n",
+       "      <th>coeff value</th>\n",
+       "      <th>Std Error</th>\n",
+       "      <th>CI lower</th>\n",
+       "      <th>CI_upper</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_1</td>\n",
+       "      <td>1.1644</td>\n",
+       "      <td>0.0427</td>\n",
+       "      <td>1.0806</td>\n",
+       "      <td>1.2481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_2</td>\n",
+       "      <td>-0.9584</td>\n",
+       "      <td>0.2241</td>\n",
+       "      <td>-1.3977</td>\n",
+       "      <td>-0.5191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_3</td>\n",
+       "      <td>-0.6592</td>\n",
+       "      <td>0.2205</td>\n",
+       "      <td>-1.0914</td>\n",
+       "      <td>-0.2271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_4</td>\n",
+       "      <td>-0.0856</td>\n",
+       "      <td>0.4482</td>\n",
+       "      <td>-0.9641</td>\n",
+       "      <td>0.7929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_5</td>\n",
+       "      <td>-0.6061</td>\n",
+       "      <td>0.3485</td>\n",
+       "      <td>-1.2891</td>\n",
+       "      <td>0.0769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_6</td>\n",
+       "      <td>0.3724</td>\n",
+       "      <td>0.4376</td>\n",
+       "      <td>-0.4852</td>\n",
+       "      <td>1.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_7</td>\n",
+       "      <td>0.4051</td>\n",
+       "      <td>0.2851</td>\n",
+       "      <td>-0.1537</td>\n",
+       "      <td>0.964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_8</td>\n",
+       "      <td>-0.3887</td>\n",
+       "      <td>0.2387</td>\n",
+       "      <td>-0.8565</td>\n",
+       "      <td>0.0791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_9</td>\n",
+       "      <td>1.9821</td>\n",
+       "      <td>0.237</td>\n",
+       "      <td>1.5176</td>\n",
+       "      <td>2.4466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>b_10</td>\n",
+       "      <td>-1.0338</td>\n",
+       "      <td>0.2787</td>\n",
+       "      <td>-1.58</td>\n",
+       "      <td>-0.4876</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  lambda coeff name coeff value Std Error CI lower CI_upper\n",
+       "0   -1.0        b_1      1.1644    0.0427   1.0806   1.2481\n",
+       "1   -1.0        b_2     -0.9584    0.2241  -1.3977  -0.5191\n",
+       "2   -1.0        b_3     -0.6592    0.2205  -1.0914  -0.2271\n",
+       "3   -1.0        b_4     -0.0856    0.4482  -0.9641   0.7929\n",
+       "4   -1.0        b_5     -0.6061    0.3485  -1.2891   0.0769\n",
+       "5   -1.0        b_6      0.3724    0.4376  -0.4852     1.23\n",
+       "6   -1.0        b_7      0.4051    0.2851  -0.1537    0.964\n",
+       "7   -1.0        b_8     -0.3887    0.2387  -0.8565   0.0791\n",
+       "8   -1.0        b_9      1.9821     0.237   1.5176   2.4466\n",
+       "9   -1.0       b_10     -1.0338    0.2787    -1.58  -0.4876"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
