--- a/code/Exercise5.ipynb
+++ b/code/Exercise5.ipynb
@@ -14,16 +14,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 1,
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import os\n",
+    "from common import *\n",
+    "import pandas as pd\n",
+    "#from mpl_toolkits.mplot3d import Axes3D\n",
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "os.chdir(\"../\")\n",
+    "print(f\"Root directory: {os.getcwd()}\")\n",
+    "\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"serif\",\n",
+    "    \"font.serif\": [\"Palatino\"],\n",
+    "    \"font.size\": 10,\n",
+    "})\n",
+    "\n",
+    "%matplotlib inline "
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Root directory: /home/arefrode/uio/fys-stk4155/projects/FYS-STK4155-Prj1_report\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 1.5\n",
+    "Start off by defining the data"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "np.random.seed(SEED_VALUE)\n",
+    "maxdegree = 12\n",
+    "degree = 5 # Chosen as the optimal degree from the bias-variance tentative\n",
+    "n = 400\n",
+    "x = np.sort(np.random.uniform(0, 1, n))\n",
+    "y = np.sort(np.random.uniform(0, 1, n))\n",
+    "z = FrankeFunction(x, y) + 0.2*np.random.normal(0, size = n)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4155\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.7",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.9.7 64-bit"
+  },
+  "interpreter": {
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   }
  },
  "nbformat": 4,
