updates on exc3

--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -44,30 +44,29 @@
     "x = np.random.randn(nsamples)\n",
     "y = 3*x**2 + np.random.randn(nsamples)\n",
     "\n",
+    "poly = PolynomialFeatures(degree = 6)\n",
     "\n",
     "#scale data !!\n",
     "\n",
     "def cross_val(k_folds: int):\n",
     "    # TODO: is equal splitting of x and y guaranteed with np.array_split if nsamples%k_folds != 0 ??\n",
-    "    x_fold = np.array_split(ary = x,indices_or_sections = k_folds)\n",
-    "    y_fold = np.array_split(ary = y,indices_or_sections = k_folds)\n",
     "    \n",
-    "    for k in k_folds:\n",
-    "        xtrain = \n",
+    "    inds = np.arange(nsamples)\n",
+    "    fold_inds = np.array_split(inds, k_folds)\n",
     "    \n",
+    "    for k in range(k_folds):\n",
+    "        #get array elements at indx k from folds_inds: \n",
+    "        x_test = x[fold_inds[k]]\n",
+    "        y_test = y[fold_inds[k]]\n",
+    "        \n",
+    "        x_train = np.delete(x, fold_inds[k])\n",
+    "        y_train = np.delete(y, fold_inds[k])\n",
+    "         Xtrain = poly.fit_transform(xtrain[:, np.newaxis])\n",
+    "        ridge.fit(Xtrain, ytrain[:, np.newaxis])\n",
     "\n",
     "cross_val(6)"
    ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-11-8100ecbe69e4>, line 24)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-8100ecbe69e4>\"\u001b[0;36m, line \u001b[0;32m24\u001b[0m\n\u001b[0;31m    cross_val(6)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
