Expected indentation block error

--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -4,25 +4,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import numpy as np\r\n",
-    "import pandas as pd\r\n",
-    "import seaborn as sns\r\n",
-    "import matplotlib.pyplot as plt\r\n",
-    "import os\r\n",
-    "from common import *\r\n",
-    "import pandas as pd\r\n",
-    "#from mpl_toolkits.mplot3d import Axes3D\r\n",
-    "from sklearn.linear_model import Lasso, Ridge, LinearRegression\r\n",
-    "\r\n",
-    "print(f\"Root directory: {os.getcwd()}\")\r\n",
-    "\r\n",
-    "plt.rcParams.update({\r\n",
-    "    \"text.usetex\": True,\r\n",
-    "    \"font.family\": \"serif\",\r\n",
-    "    \"font.serif\": [\"Palatino\"],\r\n",
-    "    \"font.size\": 10,\r\n",
-    "})\r\n",
-    "\r\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "from common import *\n",
+    "import pandas as pd\n",
+    "#from mpl_toolkits.mplot3d import Axes3D\n",
+    "from sklearn.linear_model import Lasso, Ridge, LinearRegression\n",
+    "\n",
+    "print(f\"Root directory: {os.getcwd()}\")\n",
+    "\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"serif\",\n",
+    "    \"font.serif\": [\"Palatino\"],\n",
+    "    \"font.size\": 10,\n",
+    "})\n",
+    "\n",
     "%matplotlib inline "
    ],
    "outputs": [
@@ -65,38 +65,38 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "# Preview plot of the franke function\r\n",
-    "%matplotlib\r\n",
-    "np.random.seed(4155)\r\n",
-    "y = x = np.arange(0, 1, 0.05)\r\n",
-    "x, y = np.meshgrid(x,y)\r\n",
-    "z = FrankeFunction(x, y)\r\n",
-    "noise_mesh = 0.05 * np.random.randn(z.shape[0], z.shape[1]) # Stochastic noise\r\n",
-    "z_noisy = z + noise_mesh\r\n",
-    "\r\n",
-    "fig = plt.figure()\r\n",
-    "# Ploting frankefunction without noise\r\n",
-    "ax1 = fig.add_subplot(1,2,1, projection='3d') # Are :)steike\r\n",
-    "ax1.title.set_text(\"Plot of the Franke Function\")\r\n",
-    "ax1.view_init(elev=30., azim=-25.0)\r\n",
-    "ax1.set_xlabel(\"x\"); ax1.set_ylabel(\"y\"); ax1.set_zlabel(\"z\")\r\n",
-    "surf1 = ax1.plot_surface(x,y,z, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\r\n",
-    "# Customize the z axis.\r\n",
-    "ax1.set_zlim(-0.10, 1.40)\r\n",
-    "ax1.zaxis.set_major_locator(LinearLocator(10))\r\n",
-    "ax1.zaxis.set_major_formatter(FormatStrFormatter('%.02f'))\r\n",
-    "\r\n",
-    "# Ploting frankefunction with noise\r\n",
-    "ax2 = fig.add_subplot(1,2,2, projection='3d')\r\n",
-    "ax2.title.set_text(\"Plot of the Franke Function\\n(noise added)\")\r\n",
-    "ax2.view_init(elev=30., azim=-25.0)\r\n",
-    "ax2.set_xlabel(\"x\"); ax2.set_ylabel(\"y\"); ax2.set_zlabel(\"z\")\r\n",
-    "surf2 = ax2.plot_surface(x,y,z_noisy, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\r\n",
-    "# Customize the z axis.\r\n",
-    "ax2.set_zlim(-0.10, 1.40)\r\n",
-    "ax2.zaxis.set_major_locator(LinearLocator(10))\r\n",
-    "ax2.zaxis.set_major_formatter(FormatStrFormatter('%.02f'))\r\n",
-    "\r\n",
+    "# Preview plot of the franke function\n",
+    "%matplotlib\n",
+    "np.random.seed(4155)\n",
+    "y = x = np.arange(0, 1, 0.05)\n",
+    "x, y = np.meshgrid(x,y)\n",
+    "z = FrankeFunction(x, y)\n",
+    "noise_mesh = 0.05 * np.random.randn(z.shape[0], z.shape[1]) # Stochastic noise\n",
+    "z_noisy = z + noise_mesh\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "# Ploting frankefunction without noise\n",
+    "ax1 = fig.add_subplot(1,2,1, projection='3d') # Are :)steike\n",
+    "ax1.title.set_text(\"Plot of the Franke Function\")\n",
+    "ax1.view_init(elev=30., azim=-25.0)\n",
+    "ax1.set_xlabel(\"x\"); ax1.set_ylabel(\"y\"); ax1.set_zlabel(\"z\")\n",
+    "surf1 = ax1.plot_surface(x,y,z, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\n",
+    "# Customize the z axis.\n",
+    "ax1.set_zlim(-0.10, 1.40)\n",
+    "ax1.zaxis.set_major_locator(LinearLocator(10))\n",
+    "ax1.zaxis.set_major_formatter(FormatStrFormatter('%.02f'))\n",
+    "\n",
+    "# Ploting frankefunction with noise\n",
+    "ax2 = fig.add_subplot(1,2,2, projection='3d')\n",
+    "ax2.title.set_text(\"Plot of the Franke Function\\n(noise added)\")\n",
+    "ax2.view_init(elev=30., azim=-25.0)\n",
+    "ax2.set_xlabel(\"x\"); ax2.set_ylabel(\"y\"); ax2.set_zlabel(\"z\")\n",
+    "surf2 = ax2.plot_surface(x,y,z_noisy, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\n",
+    "# Customize the z axis.\n",
+    "ax2.set_zlim(-0.10, 1.40)\n",
+    "ax2.zaxis.set_major_locator(LinearLocator(10))\n",
+    "ax2.zaxis.set_major_formatter(FormatStrFormatter('%.02f'))\n",
+    "\n",
     "plt.savefig(f\"{REPORT_FIGURES}franke_function_preview.pdf\")"
    ],
    "outputs": [
@@ -129,13 +129,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "np.random.seed(4155)\r\n",
-    "n = 1000 # The number of point in the franke function\r\n",
-    "x = np.random.rand(n)\r\n",
-    "y = np.random.rand(n)\r\n",
-    "z = FrankeFunction(x, y) \r\n",
-    "noise = 0.05 * np.random.randn(n) # Stochastic noise\r\n",
-    "#noise = 0.7 * np.random.randn(n) # Stochastic noise\r\n",
+    "np.random.seed(4155)\n",
+    "n = 1000 # The number of point in the franke function\n",
+    "x = np.random.rand(n)\n",
+    "y = np.random.rand(n)\n",
+    "z = FrankeFunction(x, y) \n",
+    "noise = 0.05 * np.random.randn(n) # Stochastic noise\n",
+    "#noise = 0.7 * np.random.randn(n) # Stochastic noise\n",
     "z += noise # Adding stochastic noise"
    ],
    "outputs": [],
@@ -153,29 +153,29 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "fig = plt.figure(figsize=(8,8))\r\n",
-    "degrees = 6\r\n",
-    "z_train_OLS = pd.DataFrame()\r\n",
-    "z_hat_train_OLS = pd.DataFrame()\r\n",
-    "z_test_OLS = pd.DataFrame()\r\n",
-    "z_hat_test_OLS = pd.DataFrame()\r\n",
-    "\r\n",
-    "# TODO: Must fix so that training and test data are used. \r\n",
-    "# Must evalute model using MSE from traning and test\r\n",
-    "for degree in range(1, degrees + 1):\r\n",
-    "    X = create_X(x, y, degree) # Design MatrixS\r\n",
-    "    model = OLS() # The model\r\n",
-    "    model.fit(X, z) # Fitting the model\r\n",
-    "    z_hat = model.predict(X) # predict on train data\r\n",
-    "    \r\n",
-    "    # Plot\r\n",
-    "    ax = fig.add_subplot(3,2, degree, projection='3d')\r\n",
-    "    ax.view_init(elev=30., azim=-25.0)\r\n",
-    "    ax.title.set_text(f\"OLS/Linear fit of degree{degree}\")\r\n",
-    "    ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\r\n",
-    "    ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\r\n",
-    "fig.suptitle(\"OLS fit to the Franke Function\")\r\n",
-    "plt.tight_layout()\r\n",
+    "fig = plt.figure(figsize=(8,8))\n",
+    "degrees = 6\n",
+    "z_train_OLS = pd.DataFrame()\n",
+    "z_hat_train_OLS = pd.DataFrame()\n",
+    "z_test_OLS = pd.DataFrame()\n",
+    "z_hat_test_OLS = pd.DataFrame()\n",
+    "\n",
+    "# TODO: Must fix so that training and test data are used. \n",
+    "# Must evalute model using MSE from traning and test\n",
+    "for degree in range(1, degrees + 1):\n",
+    "    X = create_X(x, y, degree) # Design MatrixS\n",
+    "    model = OLS() # The model\n",
+    "    model.fit(X, z) # Fitting the model\n",
+    "    z_hat = model.predict(X) # predict on train data\n",
+    "    \n",
+    "    # Plot\n",
+    "    ax = fig.add_subplot(3,2, degree, projection='3d')\n",
+    "    ax.view_init(elev=30., azim=-25.0)\n",
+    "    ax.title.set_text(f\"OLS/Linear fit of degree{degree}\")\n",
+    "    ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\n",
+    "    ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\n",
+    "fig.suptitle(\"OLS fit to the Franke Function\")\n",
+    "plt.tight_layout()\n",
     "plt.savefig(f\"{REPORT_FIGURES}franke_function_OLS_fit.pdf\")"
    ],
    "outputs": [],
@@ -1082,7 +1082,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.11 64-bit ('pytorch1': conda)"
+   "display_name": "Python 3.9.7 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1094,10 +1094,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.7"
   },
   "interpreter": {
-   "hash": "4100b45d1ec7c24b8fe1569d39871ffb9fcc213dcc50046fc68fe247fbf6e84f"
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   }
  },
  "nbformat": 4,
