--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -492,7 +492,7 @@
     "\r\n",
     "OLSrun = []\r\n",
     "for degree in range(1, degrees+1):\r\n",
-    "    print(f\"Degree{degree}\")\r\n",
+    "    print(f\"Running OLS fitting on degree{degree}\")\r\n",
     "    X = create_X(x, y, degree) # Design Matrix\r\n",
     "    \r\n",
     "    # Scaling data and splitting it into training and test sets\r\n",
@@ -534,14 +534,14 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Degree1\n",
-      "Degree2\n",
-      "Degree3\n",
-      "Degree4\n",
-      "Degree5\n",
-      "Degree6\n",
-      "Degree7\n",
-      "Degree8\n"
+      "Running OLS fitting on degree1\n",
+      "Running OLS fitting on degree2\n",
+      "Running OLS fitting on degree3\n",
+      "Running OLS fitting on degree4\n",
+      "Running OLS fitting on degree5\n",
+      "Running OLS fitting on degree6\n",
+      "Running OLS fitting on degree7\n",
+      "Running OLS fitting on degree8\n"
      ]
     }
    ],
@@ -599,7 +599,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "source": [
-    "OLS_summary = OLSrun[3][\"summary\"]\r\n",
+    "OLSrunOptimal = OLSrun[3]\r\n",
+    "OLS_summary = OLSrunOptimal[\"summary\"]\r\n",
     "display(OLS_summary)"
    ],
    "outputs": [
@@ -800,6 +801,23 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Plotting the fitted terrain image using the most optimal degree"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "OLS_X_test = OLSrunOptimal[\"X_test\"]\r\n",
+    "OLS_y_test = OLSrunOptimal[\"z_test\"]\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Comments on the OLS fit to terrain data:\r\n",
     "We scale the data since x, y, z is they are not between 0 to 1. Degree of 4 seems to yeild the best performance when fitting to the choosen terrain data."
    ],
@@ -835,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "source": [
     "i = 1\r\n",
     "value = 720\r\n",
@@ -887,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "source": [
     "i = 1\r\n",
     "value = 360\r\n",
